--- a/src/main/ui/main.ui
+++ b/src/main/ui/main.ui
@@ -386,6 +386,22 @@
         <string>100</string>
        </property>
       </widget>
+      <widget class="QProgressBar" name="progressBar">
+       <property name="geometry">
+        <rect>
+         <x>30</x>
+         <y>240</y>
+         <width>461</width>
+         <height>23</height>
+        </rect>
+       </property>
+       <property name="value">
+        <number>0</number>
+       </property>
+       <property name="textVisible">
+        <bool>false</bool>
+       </property>
+      </widget>
      </widget>
     </item>
     <item>
